2008-06-06  Jonny Lamb  <jonnylamb@jonnylamb.com>

	* VERSION: Upped version number for a new release.

2008-05-11  Mark Ellis <mark@mpellis.org.uk>

	* man page fix, thanks to Evgeni Golov

2008-05-06  Jonny Lamb  <jonnylamb@jonnylamb.com>

	* .cvsignore:
	* cvsclean:
	* lib/.cvsignore:
	* src/.cvsignore: Removed useless CVS files.

	* bootstrap:
	* orange.spec.in: Removed spec file.

2008-05-06  Jonny Lamb  <jonnylamb@jonnylamb.com>

	* VERSION: Upped version number.

2008-01-09  Mark Ellis <mark@mpellis.org.uk>

	* add LICENSE to EXTRA_DIST
	* various dist related fixes to lib/Makefile.am
	* moved Changelog to ChangeLog for make dist

2007-11-29  Mark Ellis <mark@mpellis.org.uk>

	* corrected a packed attribute use in inno.h,
	  from Debian package

2007-09-30  Mark Ellis <mark@mpellis.org.uk>

	* started changelog
	* added man page from debian package
	* included config.h in source files
	* fix linking with unshield/dynamite
